flux/dmz/authentik/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    network-zone: dmz
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
